2013-06-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add Red Hat bugzilla references.

2013-07-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add latest security fixes and other
	changes brought in when syncing with 7u40 b31.
	Set release date.

2013-07-01  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b31.
	(CORBA_CHANGESET): Update to IcedTea 2.4.1 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map: Update default to IcedTea 2.4.1 tag.
	* patches/boot/ecj-diamond.patch,
	* patches/boot/ecj-multicatch.patch:
	Add new cases.
	* patches/boot/ecj-stringswitch.patch:
	Update MethodHandleNatives patch, including
	adding new case.
	* patches/boot/tobin.patch:
	Update following move from sun.awt.X11
	to sun.awt.
	* patches/rhino.patch,
	* patches/systemtap_gc.patch:
	Regenerated.

2013-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* configure.ac: Bump to 2.4.1pre.
	* NEWS: Add 2.4.1 section.

2013-06-10  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Update following release
	annoucement.

2013-04-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_NAME): Make same across all versions.

2013-06-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to IcedTea 2.4 forest head.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.