@@ -175,7 +175,6 @@ IT_DISABLE_OPTIMIZATIONS
 IT_ENABLE_WERROR
 IT_ENABLE_JAR_COMPRESSION
 IT_SET_SHARK_BUILD
-IT_ENABLE_ZERO_BUILD
 IT_CHECK_ADDITIONAL_VMS
 
 IT_WITH_VERSION_SUFFIX
