@@ -1,3 +1,13 @@
+2013-06-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	* acinclude.m4:
+	(IT_WITH_HOTSPOT_BUILD): Define once.
+	(IT_CHECK_FOR_LCMS): Turn system LCMS off by default
+	and warn if enabled as it is unlikely to have
+	the new security fixes.
+	* configure.ac: Drop IT_ENABLE_ZERO_BUILD; called
+	by IT_WITH_HOTSPOT_BUILD.
+
 2013-06-25  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	* NEWS: Add Red Hat bugzilla references.
